--- a/test2.html
+++ b/test2.html
@@ -7,11 +7,11 @@
 
 </head>
 <body >
-    <div id="58fe2a0dc3c54f7f9e14c04b0ee7c56d" class="chart-container" style="width:700px; height:500px; "></div>
+    <div id="8ebbe4fdc6af4e29a3a714360b23e565" class="chart-container" style="width:700px; height:500px; "></div>
     <script>
-        var chart_58fe2a0dc3c54f7f9e14c04b0ee7c56d = echarts.init(
-            document.getElementById('58fe2a0dc3c54f7f9e14c04b0ee7c56d'), 'white', {renderer: 'canvas'});
-        var option_58fe2a0dc3c54f7f9e14c04b0ee7c56d = {
+        var chart_8ebbe4fdc6af4e29a3a714360b23e565 = echarts.init(
+            document.getElementById('8ebbe4fdc6af4e29a3a714360b23e565'), 'white', {renderer: 'canvas'});
+        var option_8ebbe4fdc6af4e29a3a714360b23e565 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -24,15 +24,13 @@
         "enabled": false
     },
     "color": [
-        "#5470c6",
-        "#91cc75",
-        "#fac858",
-        "#ee6666",
-        "#73c0de",
-        "#3ba272",
-        "#fc8452",
-        "#9a60b4",
-        "#ea7ccc"
+        "#072227",
+        "#778899",
+        "#4FBDBA",
+        "#E96479",
+        "#4FBDBA",
+        "#7A5DC1",
+        "#444693"
     ],
     "series": [
         {
@@ -218,6 +216,9 @@
             "itemGap": 10,
             "itemWidth": 25,
             "itemHeight": 14,
+            "textStyle": {
+                "color": "#fff"
+            },
             "backgroundColor": "transparent",
             "borderColor": "#ccc",
             "borderWidth": 1,
@@ -260,18 +261,22 @@
     "title": [
         {
             "show": true,
-            "text": "Flags(%)",
+            "text": "\ucd1d Flags(%)",
             "target": "blank",
             "subtarget": "blank",
             "padding": 5,
             "itemGap": 10,
             "textAlign": "auto",
             "textVerticalAlign": "auto",
-            "triggerEvent": false
+            "triggerEvent": false,
+            "textStyle": {
+                "color": "#fff",
+                "fontSize": 18
+            }
         }
     ]
 };
-        chart_58fe2a0dc3c54f7f9e14c04b0ee7c56d.setOption(option_58fe2a0dc3c54f7f9e14c04b0ee7c56d);
+        chart_8ebbe4fdc6af4e29a3a714360b23e565.setOption(option_8ebbe4fdc6af4e29a3a714360b23e565);
     </script>
 </body>
 </html>
